# learn_opengl

./: CMakeLists.txt  main.cc  points.cc  points.h  receptacle.cc  receptacle.h  triangle.cc  triangle.h
